Remove google watermark, align and resize search button, repair search icon, tweak margins.

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -1774,3 +1774,35 @@ cursor: pointer;
   border: none;
   box-shadow: none;
 }
+/* Google Custom Search input box */
+table.gsc-search-box td.gsc-input {
+  margin-left: 0 !important;
+  margin-top: 4px !important;
+
+}
+.cse input.gsc-input, input.gsc-input {
+background-image: none !important;
+background-repeat:no-repeat !important;
+font-size:16px !important;
+padding: 1px 6px !important;
+
+}
+.cse input.gsc-input:focus, input.gsc-input:focus {
+background-image:none !important;
+font-size:16px !important;
+padding: 1px 6px !important;
+}
+
+/* Google Custom Search Engine button */
+input.gsc-search-button, input.gsc-search-button:hover, input.gsc-search-button:focus{
+  border: none !important;
+  background-color: #EFD01B !important;
+  background-image: url('https://www.google.com/uds/css/v2/search_box_icon.png') !important;
+  filter: none !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+  width: 85% !important;
+  height: 85% !important;
+  margin-left: 0 !important;
+  margin-top: 5px !important;
+}
